--- a/000 Daily Notes/26-08-2022.md
+++ b/000 Daily Notes/26-08-2022.md
@@ -1,2 +1,5 @@
 [[25-08-2022]] $\Leftarrow$ 26-08-2022 $\Rightarrow$ [[27-08-2022]]
 
+Setup [[Jenkins]] job for [[MicDataUpdater]]
+
+[[Timeline]] Look into https://www.npmjs.com/package/express-queue
